[package]
name = "devloop"
version = "0.1.5"
authors = ["Amit Gold <amit.gold00@gmail.com>"]
description = "A tool to help with repetitive commands during development."
repository = "https://www.github.com/SuperCuber/devloop"
readme = "README.md"
keywords = ["devloop", "development", "repetitive"]
categories = ["command-line-utilities"]
license = "WTFPL"

[dependencies]
clap = "2.*"
yaml-rust = "0.3.*"
log = "0.3.*"
env_logger = "0.4.*"
colored = "1.5.*"
crossterm_terminal = "0.1.*"