[package]
name = "devloop"
version = "0.2.0"
authors = ["Amit Gold <amit.gold00@gmail.com>"]
description = "A tool to help with repetitive commands during development."
repository = "https://www.github.com/SuperCuber/devloop"
readme = "README.md"
keywords = ["devloop", "development", "repetitive"]
categories = ["command-line-utilities"]
license = "Unlicense"

[dependencies]
crossterm = "0.18.*"
ctrlc = "3.*"
lazy_static = "1.*"
serde = "1.*"
serde_derive = "1.*"
structopt = "0.3.*"
thiserror = "1.*"
toml = "0.5.*"
